syntax = "proto3";

option java_package = "com.qianxun.grpc.lib.sysLog";

package sysLog;

import public "google/protobuf/timestamp.proto";

service SysLogService {
    rpc GetById (ByIdReq) returns (SysLog) {}
    rpc GetList (GetListReq) returns (PageList) {}
    rpc Insert (BaseSysLog) returns (Result) {}
    rpc Update (SysLog) returns (Result) {}
    rpc Delete (ByIdReq) returns (Result) {}
}

message ByIdReq {
    int32 id = 1;
}

message GetListReq {
    string query = 1;
    int32 page_size = 2;
    int32 page = 3;
}

message Result {
    bool success = 1;
}

// 新增时,使用的message,以保证用户不传入多余信息
message BaseSysLog {
    string type = 1;
    string title = 2;
    string service_id = 3;
    string create_by = 4;
    string ip_addr = 5;
    string request_uri = 6;
    string method = 7;
    string params = 8;
    string exception = 9;
}

message SysLog {
    int64 id = 1;
    string type = 2;
    string title = 3;
    string service_id = 4;
    string create_by = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    string ip_addr = 8;
    string request_uri = 9;
    string method = 10;
    string params = 11;
    string exception = 12;
    int32 deleted = 13;
}

message PageList {
    int32 total = 1;
    repeated SysLog sys_logs = 2;
}
